reface: cache + fetch